hphp/hack/test/typecheck/coeffects/test_no_enforcement_on_non_static_coeffects_and_default.php.exp
ERROR: File "test_no_enforcement_on_non_static_coeffects_and_default.php", line 13, characters 47-54:
Unbound name: `HH\Contexts\Unsafe\nonsense` (Naming[2049])
ERROR: File "test_no_enforcement_on_non_static_coeffects_and_default.php", line 13, characters 47-54:
Unbound name: `HH\Contexts\nonsense` (Naming[2049])
